<resources>
    <!-- palavras comuns -->
    <string name="app_name">FlashCardStudy</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="previous_image">previous</string>
    <string name="flash_card_description">FlashCard description</string>
    <string name="next_image">Next</string>
    <string name="button_flashcard_send">Enviar</string>
    <string name="flashcard_image_desc">FlashCard description</string>
    <string name="feedback_message">Feedback de mensagem ao usuario</string>
    <string name="atention">Atention!</string>

    <!-- hints -->
    <string name="hint_flashcard">Save here your answer!</string>
    <string name="hint_login">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_image_edittext">Add your x-x image here </string>

    <!-- toolbar -->
    <string name="toolbar_login">Login</string>
    <string name="back_toolbar">Back</string>
    <string name="login">Login</string>
    <string name="login_google">Login Google</string>
    <string name="profile_no">Don\'t have register?</string>
    <string name="password_forgot">Forgot password</string>
    <string name="login_instagram">Login Instagram</string>
    <string name="toolbar_main">FlashCard</string>
    <string name="toolbar_principal">Menu</string>
    <string name="toolbar_register">Register</string>
    <string name="toolbar_profile">Profile</string>

    <!-- Toast -->
    <string name="msg_toast_login_failed">Login failed</string>
    <string name="msg_toast_login_success">Login success!</string>
    <string name="msg_error_email_blank">Please, fill the blank space</string>
    <string name="msg_erro_email_invalid">Invalid email</string>
    <string name="msg_error_password_blank">Please, fill the password field</string>
    <string name="hint_name">Name</string>
    <string name="button_register">Register</string>
    <string name="profile_has">Already registered? Go to login!</string>
    <string name="msg_toast_register_success">Registration done successfully!</string>
    <string name="msg_toast_register_failed">Registration failed</string>
    <string name="msg_toast_token_success">Successfully recovered token</string>
    <string name="msg_toast_token_failed">Failed to retrieve token</string>
    <string name="msg_error_password">Please, complete password field correctly</string>
    <string name="flashcard_game_home_button">Flash Card Game</string>
    <string name="item_home_icon">Home</string>
    <string name="item_history">History</string>
    <string name="profile_icon">Profile</string>

    <!-- Todas as mensagens erro -->
    <string name="msg_error_no_connection">Não há conexão com a internet. Por favor verifique e tente novamente!</string>
    <string name="msg_error_no_server">Houve um erro ao tentar conectar-se ao servidor!</string>
    <string name="msg_erro_exception_timed_out">Não foi possível conectar ao servidor, devido ao tempo de espera!</string>
    <string name="msg_erro_communication">Não foi possível conectar-se com o servidor!</string>
    <string name="msg_erro_unknown_communication">Não foi possível obter o erro ocorrido com o servidor!</string>
    <string name="img_add">Image</string>

    <!-- Buttons -->
    <string name="img_add_button">Add</string>
    <string name="button_card_save">Save</string>

    <string name="toolbar_card">Card</string>
    <string name="msg_flashcard_saved_success">Flashcard successfully saved!</string>
    <string name="msg_flashcard_saved_error">Error while saving flashcard</string>
    <string name="msg_flashcard_error_upload">Error while uploading flashcard</string>
    <string name="msg_flashcard_load_error">Error loading image</string>
    <string name="jpg">.jpg</string>
    <string name="msg_error_no_flashcard_loaded">No flashcards loaded</string>
    <string name="msg_error_current_flashcard">No current flashcard</string>
    <string name="msg_flashcard_answer_saved">Flashcard answer successfully saved</string>
    <string name="msg_error_flashcard_answer">Error saving flashcard answer</string>
    <string name="msg_validation_card_answer">Please, save card answer!</string>
    <string name="card_icon">Card</string>


</resources>