<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Toolbar sempre posicionada no topo -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/AppToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="2dp"
        app:title="@string/toolbar_card" />

    <!-- Layout principal que centraliza o conteúdo abaixo da Toolbar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F0F0F0"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Imagem principal -->
        <ImageView
            android:id="@+id/imgFlashCard"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#DDDDDD"
            android:contentDescription="@string/flash_card_description"
            android:scaleType="centerCrop" />


        <!-- Campo de texto para resposta -->
        <EditText
            android:id="@+id/txtAnswerFlashCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_flashcard_background"
            android:hint="@string/hint_flashcard"
            android:inputType="text"
            android:padding="12dp"
            android:textAlignment="center" />

        <!-- Botão de envio -->
        <Button
            android:id="@+id/cmdSendResponse"
            android:layout_width="@dimen/button_app_width"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_background_app"
            android:text="@string/button_card_save"
            android:textColor="@color/cor_app_texto" />

        <!-- Mensagem de feedback para o usuário -->
        <TextView
            android:id="@+id/lblFeedbackAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/feedback_message"
            android:textColor="@color/dark_red"
            android:textSize="14sp"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>
