<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cor_cinza_fundo"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/AppToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="@dimen/cardview_default_elevation"
        app:title="@string/toolbar_login" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_zero"
        android:layout_weight="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <!-- Login -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <!-- Legenda -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/toolbar_login"
                        android:textColor="@color/cor_app"
                        android:textSize="@dimen/text_size_18"
                        android:textStyle="italic" />

                </LinearLayout>

                <!-- Campos -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardElevation="3dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/txtEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:background="@null"
                                android:hint="@string/hint_login"
                                android:inputType="textEmailAddress"
                                android:maxLength="100"
                                android:padding="15dp"
                                android:selectAllOnFocus="true"
                                android:singleLine="true"
                                android:textColor="@color/colorAccent"
                                android:textColorHint="@color/cor_cinza"
                                android:textSize="@dimen/text_size_18" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/line_separator"
                                android:background="@color/cor_cinza_linhas" />

                            <!-- EDITTEXT SENHA -->
                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/inputSenha"
                                style="@style/Widget.Design.TextInputLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:theme="@style/CorInputLayoutSenha"
                                app:hintEnabled="false"
                                app:passwordToggleEnabled="true"
                                app:passwordToggleTint="@color/cor_app">

                                <EditText
                                    android:id="@+id/txtSenha"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@null"
                                    android:hint="@string/hint_password"
                                    android:inputType="textPassword"
                                    android:maxLength="45"
                                    android:padding="15dp"
                                    android:selectAllOnFocus="true"
                                    android:singleLine="true"
                                    android:textColor="@color/colorAccent"
                                    android:textColorHint="@color/cor_cinza"
                                    android:textSize="@dimen/text_size_18" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/line_separator"
                                android:background="@color/cor_cinza_linhas" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

            <!-- BOTÃO LOGIN -->

            <!-- BOTÃO GOOGLE -->
            <Button
                android:id="@+id/cmdLogin"
                android:layout_width="@dimen/button_app_width"
                android:layout_height="@dimen/button_app_height"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_background_app"
                android:text="@string/login"
                android:textColor="@color/cor_app_texto" />

            <Button
                android:id="@+id/cmdLoginGoogle"
                android:layout_width="@dimen/button_app_width"
                android:layout_height="@dimen/button_app_height"
                android:layout_marginBottom="15dp"
                android:background="@drawable/google_button"
                android:drawableLeft="@drawable/google_icon"
                android:paddingHorizontal="10dp"
                android:text="@string/login_google"
                android:textColor="@color/app_text_color"
                android:visibility="visible" />

            <Button
                android:id="@+id/cmdInstagramLogin"
                android:layout_width="@dimen/button_app_width"
                android:layout_height="@dimen/button_app_height"
                android:layout_marginBottom="15dp"
                android:background="@drawable/instagram_button"
                android:paddingHorizontal="10dp"
                android:text="@string/login_instagram"
                android:textColor="@color/app_text_color"
                android:visibility="visible" />

            <TextView
                android:id="@+id/lblEsqueciSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/password_forgot"
                android:textColor="@color/cor_app" />

            <TextView
                android:id="@+id/lblNaoTenhoCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/profile_no"
                android:textColor="@color/cor_app" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>